tests/NormalTests/paczka2/big_fuzzy/16214362.err
Error in line 2: 3sKAUl S337 29,3
Error in line 12: OAK S376 12,7
Error in line 10: IJceGvPGW S564 67,7
Error in line 17: IJceGvPGW S864 20,3
Error in line 13: OAK S337 2,3
Error in line 25: OAK S376 74,9
Error in line 41: 8bbkAU S376 48,1
Error in line 15: S864 S376 7,2
Error in line 47: 8bbkAU S337 2,5
Error in line 66: OAK S337 66,3
Error in line 68: Vx0Ilx9 S337 53,8
Error in line 73: Vx0Ilx9 A515 60,5
Error in line 69: OAK S864 83,4
Error in line 79: OAK S376 10,1
Error in line 89: S864 A515 74,8
Error in line 97: 3sKAUl A515 131,4
Error in line 99: 8bbkAU S864 81,4
Error in line 101: 3sKAUl S864 74,9
Error in line 123: 8bbkAU A515 64,5
Error in line 132: 8bbkAU S864 58,4
Error in line 129: S864 S337 21,8
Error in line 128: mmimDzGiHo S864 36,6
Error in line 145: IJceGvPGW S376 17,5
Error in line 144: S864 S864 8,3
Error in line 154: IJceGvPGW S376 9,0
Error in line 159: Vx0Ilx9 S337 25,4
Error in line 163: Vx0Ilx9 S376 8,1
Error in line 160: OAK S337 76,6
Error in line 170: OAK A515 44,2
Error in line 161: IJceGvPGW A515 72,1
Error in line 187: S864 A515 67,5
Error in line 191: S864 S864 46,1
Error in line 193: S864 A515 18,5
Error in line 194: mmimDzGiHo S337 141,1
Error in line 206: mmimDzGiHo S864 34,7
Error in line 207: mmimDzGiHo A515 40,3
Error in line 195: 8bbkAU A515 170,6
Error in line 213: mmimDzGiHo S376 19,0
Error in line 222: 8bbkAU A515 55,6
Error in line 228: mmimDzGiHo S864 52,2
Error in line 227: S864 S376 35,9
Error in line 236: S864 A515 46,12
Error in line 235: S864 A515 64,1
